--- a/clients.html
+++ b/clients.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="Sishuba Group, a 100% black owned Out of Home entity that was established in 2014.">
+        content="Sishuba Media, a 100% black owned Out of Home entity that was established in 2014.">
     <meta name="keywords" content="Sishuba Media">
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
